# gridgeo

./: .doctr-files  .gitattributes  .gitignore  .pre-commit-config.yaml  .stickler.yml  .travis.yml  CHANGES.txt  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  genindex.html  github_deploy_key_pyoceans_gridgeo.enc  gridgeo.html  gridgeo_tour.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: docs.yml  tests.yml
_modules/: index.html
_modules/gridgeo/: cfvariable.html  gridgeo.html  ugrid.html
_sources/: gridgeo.rst.txt  gridgeo_tour.ipynb.txt  index.rst.txt
_static/: documentation_options.js
docs/: Makefile
docs-master/: .doctr-files  genindex.html  gridgeo.html  gridgeo_tour.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs-master/_modules/: index.html
docs-master/_modules/gridgeo/: cfvariable.html  gridgeo.html  ugrid.html
docs-master/_static/: documentation_options.js
docs/source/: conf.py  grid.dbf  grid.shx  index.rst
gridgeo/: __init__.py  _version.py  cfvariable.py  dask_netcdf.py  gridgeo.py  gridio.py  ugrid.py  utilities.py
gridgeo/tests/: test_load_grid.py
gridgeo/tests/data/: FVCOM-Nowcast-Agg.nc  README.txt  grid.nc
notebooks/: CFVariable.ipynb  example_gridgeo.ipynb  example_gridgeo_generic_grid.ipynb  example_gridgeo_non-compliant.ipynb  example_gridgeo_rgrid.ipynb  example_gridgeo_sgrid.ipynb  example_gridgeo_sgrid_all_grids_via_cube.ipynb  example_gridgeo_ugrid.ipynb  gridgeo_tour.ipynb  pyugrid_vs_gridgeo.ugrid.ipynb  sgrid.ipynb  sgrid.topojson  ugrid.ipynb  ugrid.topojson  unknown_1d.ipynb  unknown_2d.ipynb
tests/: test_cfvariable.py  test_fail.py  test_from_cube.py  test_generic_grid.py  test_rgrid.py  test_sgrid.py  test_ugrid.py  test_unknown_1d.py  test_unknown_2d.py
tests/data/: CA_DAS.nc  ESPRESSO_Real-Time_v2_Averages_Best.nc  OCOS.nc  README.txt  point_time_series.nc  sgrid.nc  unknown_1d.nc  unknown_2d.nc
