[build-system]
requires = [
  "setuptools>=41.2",
  "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "gridgeo"
dynamic = ["version"]
description = "Convert UGRID, SGRID, and non-compliant ocean model grids to geo-like objects"
readme = "README.md"
authors = [
  {email = "ocefpaf@gmail.com"},
  {name = "Filipe Fernandes"}
]
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
dependencies = [
  "docopt",
  "netCDF4",
  "shapely>=2",
  "numpy>=2",
]

[project.entry-points.console_scripts]
gridio = "gridgeo.gridio:main"

[project.optional-dependencies]
test = [
  "cartopy",
  "fiona",
  "folium",
  "hypothesis",
  "matplotlib",
  "nbsphinx",
  "pooch",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "sphinx",
]

[project.urls]
homepage = "https://github.com/pyoceans/gridgeo"
documentation = "https://pyoceans.github.io/gridgeo"
repository = "https://github.com/pyoceans/gridgeo"

[tool.setuptools]
license-files = ["LICENSE.txt"]
zip-safe = true
platforms = ["any"]
packages = ["gridgeo"]

[tool.setuptools_scm]
write_to = "gridgeo/_version.py"
write_to_template = "__version__ = '{version}'"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
]
addopts = "-s -rxs -v"

[check-manifest]
ignore = [
    "*.yml",
    ".coveragerc",
    "docs",
    "docs/*",
    "notebooks",
    "notebooks/*",
    "tests",
    "tests/*",
]


[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64"]

[tool.pixi.environments]
default = { features = ["py313"], solve-group = "py313" }
py313 = { features = ["py313"], solve-group = "py313" }
py312 = ["py312"]
py311 = ["py311"]
py310 = ["py310"]

[tool.pixi.tasks]
test = "pip install -e . --no-deps --force-reinstall && pytest -rxs tests"
docs = """\
pip install -e . --no-deps --force-reinstall
&& jupyter nbconvert --to notebook --execute notebooks/gridgeo_tour.ipynb --output=gridgeo_tour-output.ipynb
&& mv notebooks/*output.ipynb docs/source/
&& cd docs
&& make clean html linkcheck
"""

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.dependencies]
cartopy = ">=0.24.0,<0.25"
fiona = ">=1.10.1,<2"
folium = ">=0.20.0,<0.21"
hypothesis = ">=6.135.26,<7"
matplotlib = ">=3.10.3,<4"
nbsphinx = ">=0.9.7,<0.10"
pooch = ">=1.8.2,<2"
pytest = ">=8.4.1,<9"
pytest-cov = ">=6.2.1,<7"
pytest-xdist = ">=3.8.0,<4"
sphinx = ">=8.1.3,<9"
jupyter = ">=1.1.1,<2"
pip = ">=25.1.1,<26"
